# Sudoku_Game

./: .clang-uml  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  LICENSE  PROJECT_CONTEXT.md  README.md  main.cpp  sudoku.puml
config/: Doxyfile  doxygen_latex_header.tex
core/: Board.cpp  Board.h  Cell.cpp  Cell.h  ConsoleUI.cpp  ConsoleUI.h  GameMode.cpp  GameMode.h  Generator.cpp  Generator.h  LargeSudokuMode.cpp  LargeSudokuMode.h  Position.cpp  Position.h  SaveManager.cpp  SaveManager.h  Solver.cpp  Solver.h  StandardSudokuMode.cpp  StandardSudokuMode.h  SudokuGame.cpp  SudokuGame.h  SudokuModeBase.cpp  SudokuModeBase.h  Sudokurules.cpp  Sudokurules.h
docs/: tools_used.tex  user_manual.tex
uml/: sudoku_class_diagram.puml
